[package]
name = "tokio-nbd"
description = "Network Block Device (NBD) server with pluggable backend support using Rust and the tokio runtime"
version = "0.2.1"
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/john-parton/tokio-nbd"

[dependencies]
bitflags = "2.9.1"
int-enum = "1.2.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
] }


[dev-dependencies]
tokio = { version = "1.46.1", default-features = false, features = [
    "test-util",
] }
